k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hbase-validator-service
  namespace: default
  labels:
    app: hbase-validator
spec:
  type: ClusterIP
  ports:
  - port: 8501
    targetPort: 8501
    protocol: TCP
    name: http
  selector:
    app: hbase-validator
---
apiVersion: v1
kind: Service
metadata:
  name: hbase-validator-nodeport
  namespace: default
  labels:
    app: hbase-validator
spec:
  type: NodePort
  ports:
  - port: 8501
    targetPort: 8501
    nodePort: 30851
    protocol: TCP
    name: http
  selector:
    app: hbase-validator
